add logic for password length

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://www.flaticon.com/free-icons/space" title="space icons"/>
     <title>Password Generator</title>
   </head>
   <body>
