--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+<head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="theme-color" content="#000000"/>
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+            name="description"
+            content="Web site created using create-react-app"
     />
-    <link href="https://www.flaticon.com/free-icons/space" title="space icons"/>
     <title>Password Generator</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+</head>
+<body style="margin: 0; padding: 0">
+<div id="root"></div>
+</body>
 </html>
