--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <title>Password Generator</title>
 </head>
-<body style="margin: 0; padding: 0">
+<body style="margin: 0; padding: 0; font-size: 18px">
 <div id="root"></div>
 </body>
 </html>
