--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,9 @@
     />
     <title>Password Generator</title>
 </head>
-<body style="margin: 0; padding: 0; font-size: 18px">
-<div id="root"></div>
+<body style="margin: 0; padding: 0; font-size: 18px; min-height: 100vh">
+<div id="root" style="min-height: 100vh">
+
+</div>
 </body>
 </html>
